# centaurionupscalr

./: .replit  Pasted--Hey-Replit-Agent-We-need-to-stop-the-current-approach-of-setting-up-the-front-end-and-backend-I--1729647111903.txt  Pasted--Title-Roadmap-for-Centaurion-Slidr-App-Development-Overview-Create-a-feature-rich-im-1729297216519.txt  Pasted--Title-Roadmap-for-Centaurion-Slidr-App-Development-Overview-Create-a-feature-rich-imag-1729297045738.txt  Pasted-Compiled-with-problems-ERROR-in-src-App-js-Module-build-failed-from-node-modules-babel-lo-1729641888607.txt  Pasted-The-error-message-you-re-encountering-plaintext-ERROR-Failed-to-fetch-TypeError-Failed-to-1729353067433.txt  Pasted-import-React-useState-useRef-useEffect-from-react-import-Button-from-components-ui--1729297640944.txt  app.py  image_analysis.py  image_processing.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt
frontend/: package.json
frontend/src/: App.js
frontend/src/components/ui/: button.js  card.js  slider.js  tabs.js
