[project]
name = "repl-nix-centaurionslidr-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "opencv-python-headless>=4.10.0.84",
    "numpy>=2.1.2",
    "scikit-image>=0.24.0",
    "pillow>=11.0.0",
    "torch>=2.5.0",
    "werkzeug",
    "flask-cors>=5.0.0",
    "aiohttp>=3.10.10",
    "hypercorn",
    "asyncio",
    "opencv-python",
]
